--- a/public/index.scss
+++ b/public/index.scss
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-
-=======
 #map{
     height: 400px;
     width: 80%;
@@ -11,20 +8,9 @@
     .container {
         max-width: 1600px;
         margin: 0 8%;
-        
+        width: 84%;
     }     
 }
->>>>>>> 76224cb08b44f085f340fbc8cb781f3058c6a7a9
-@import "./styles/footer";
-@import "./styles/installment";
-@import "./styles/returnpolicy";
-@import "./styles/warranty";
-@import "./styles/category";
-@import './styles/location';
-@import './styles/loginForm';
-<<<<<<< HEAD
-@import './styles/admin';
-<<<<<<< HEAD
 
 .admin-login-screen{
     position: relative;
@@ -56,12 +42,16 @@
         }
     }
 }
-
-=======
+@import "./styles/footer";
+@import "./styles/installment";
+@import "./styles/returnpolicy";
+@import "./styles/warranty";
+@import "./styles/category";
+@import './styles/location';
+@import './styles/loginForm';
+@import './styles/admin';
 @import './styles/home';
->>>>>>> 76224cb08b44f085f340fbc8cb781f3058c6a7a9
-=======
 @import './styles/product';
 @import './styles/cart';
 @import './styles/order';
->>>>>>> e0cb30eaf20db030ed6f7cc37219856bee013498
+@import './styles/address';
