--- a/public/styles/loginForm.scss
+++ b/public/styles/loginForm.scss
@@ -4,7 +4,7 @@
     height: auto;
 
     .container{
-        height: 100vh;
+        height: auto;
     }
     .login-wrapper {
         position: fixed;
