--- a/public/index.css
+++ b/public/index.css
@@ -885,15 +885,38 @@ body {
 
 .box-form {
   z-index: 1000;
-  width: 50vw;
-  height: 80vh;
+  width: 55vw;
+  height: 40vh;
   top: 5vh;
   left: 25vw;
   background-color: white;
 }
 .box-form .form-header {
-  height: 10%;
+  height: 15%;
   padding: 1% 5%;
+}
+.box-form .form-group {
+  margin: 0;
+}
+.box-form .form-group .personal-info {
+  padding: 2vh 2vw;
+  padding-bottom: 0;
+}
+.box-form .form-group .personal-info .row {
+  margin-bottom: 2vh;
+}
+.box-form .form-group .btn-group {
+  position: absolute;
+  bottom: 3%;
+  right: 0;
+  margin-top: 1vh;
+  width: 30%;
+}
+.box-form .form-group .btn-group .btn {
+  margin: 0 1vw;
+  padding: 0;
+  width: 80%;
+  border-radius: 10px;
 }
 
 .manage-address {
