--- a/public/styles/address.scss
+++ b/public/styles/address.scss
@@ -1,13 +1,36 @@
 .box-form {
     z-index: 1000;
-    width: 50vw;
-    height: 80vh;
+    width: 55vw;
+    height: 40vh;
     top: 5vh;
     left: 25vw;
     background-color: white;
     .form-header {
-        height: 10%;
+        height: 15%;
         padding: 1% 5%;
+    }
+    .form-group {
+        margin: 0;
+        .personal-info {
+            padding: 2vh 2vw;
+            padding-bottom: 0;
+            .row {
+                margin-bottom: 2vh;
+            }
+        }
+        .btn-group {
+            position: absolute;
+            bottom: 3%;
+            right: 0;
+            margin-top: 1vh;
+            width: 30%;
+            .btn {
+                margin: 0 1vw;
+                padding: 0;
+                width: 80%;
+                border-radius: 10px;
+            }
+        }    
     }
 }
 
